--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,7 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+        renderscriptSupportModeEnabled true
     }
 
     buildTypes {
@@ -64,6 +65,7 @@ dependencies {
 
     // for blurring
     implementation 'no.danielzeller.blurbehindlib:blurbehindlib:1.0.0'
+    implementation 'com.github.mmin18:realtimeblurview:1.2.1'
 
     // for Progress Loading
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
@@ -101,6 +103,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
+    implementation("com.squareup.moshi:moshi-kotlin:1.12.0")
+    implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.12.1'
 
     //okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.3.1'
