--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MarvelCharcaters">
-        <activity android:name=".ui.MainActivity"  android:theme="@style/CustomTheme">
+        <activity android:name=".ui.MainActivity"  android:theme="@style/CustomTheme"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
