--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:name=".CoreApplication"
+        android:usesCleartextTraffic="true"
         android:theme="@style/Theme.MarvelCharcaters">
         <activity android:name=".ui.MainActivity"  android:theme="@style/CustomTheme"
             >
