--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,7 @@ dependencies {
 
     // for Progress Loading
     implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+    implementation 'com.wang.avi:library:2.1.3'
 
     // Architectural Components
     def lifecycle_version = "2.2.0"
