--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,14 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
+        android:name=".CoreApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/"
+        android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".CoreApplication"
-        android:usesCleartextTraffic="true"
-        android:theme="@style/Theme.MarvelCharcaters">
+        android:theme="@style/Theme.MarvelCharcaters"
+        android:usesCleartextTraffic="true">
         <activity android:name=".ui.MainActivity"  android:theme="@style/CustomTheme"
             >
             <intent-filter>
