--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,9 +72,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:multidex:1.0.3'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
 
     // Navigation component
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.5'
@@ -143,7 +141,6 @@ dependencies {
 
     // Local Unit Tests
     implementation "androidx.test:core:1.2.0"
-    testImplementation "junit:junit:4.13"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
     testImplementation "org.robolectric:robolectric:4.3.1"
@@ -152,23 +149,23 @@ dependencies {
     testImplementation "org.mockito:mockito-core:2.21.0"
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
+    testImplementation "junit:junit:4.13"
 
     androidTestUtil "androidx.test:orchestrator:1.1.0"
     testImplementation("com.squareup.okhttp3:mockwebserver:4.9.1")
     testImplementation "app.cash.turbine:turbine:0.2.1"
 
-    // Instrumented Unit Tests
-    androidTestImplementation "junit:junit:4.13"
-    androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.12.1"
+    // Instrumented Unit TestsandroidTestImplementation
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.2.1"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
     androidTestImplementation "com.google.truth:truth:1.0.1"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     androidTestImplementation "org.mockito:mockito-core:2.21.0"
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.28-alpha'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.28-alpha'
     debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
+    androidTestImplementation "junit:junit:4.13"
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
     androidTestImplementation('com.android.support.test.espresso:espresso-contrib:3.2.0') {
         exclude group: 'com.android.support', module: 'appcompat'
